Worked on correcting spacing issues on experiment desktop size

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -1599,8 +1599,8 @@ progress::-moz-progress-bar {
 }
 @media (min-width: 768px) {
   #experimentation #hero-experiment #title-experiment {
-    padding-top: 100px;
     margin-bottom: 180px;
+    padding-top: 100px;
   }
 }
 @media (min-width: 1025px) {
@@ -1644,10 +1644,10 @@ progress::-moz-progress-bar {
 }
 @media (min-width: 1440px) {
   #experimentation #hero-experiment #subtitle-experiment {
-    padding: 0px;
-    margin-top: -120px;
     margin-left: 50%;
     margin-right: 10%;
+    margin-top: -120px;
+    padding: 0px;
   }
 }
 @media (min-width: 768px) {
@@ -1658,8 +1658,8 @@ progress::-moz-progress-bar {
 }
 @media (min-width: 1025px) {
   #experimentation #section-1-experiment {
-    margin: auto 5%;
     column-gap: 10%;
+    margin: auto 5%;
   }
 }
 @media (min-width: 768px) {
@@ -1676,47 +1676,47 @@ progress::-moz-progress-bar {
   }
 }
 #experimentation #section-1-experiment #pullquote-section-1 p {
-  text-align: left;
   color: #EF777A;
-  padding-right: 20px;
   padding-left: 20px;
+  padding-right: 20px;
+  text-align: left;
 }
 @media (min-width: 768px) {
   #experimentation #section-1-experiment #pullquote-section-1 p {
+    padding-left: 40%;
+    padding-right: 10%;
     padding-top: 0px;
     text-align: right;
-    padding-right: 10%;
-    padding-left: 40%;
   }
 }
 @media (min-width: 1440px) {
   #experimentation #section-1-experiment #pullquote-section-1 p {
-    padding-top: 40px;
-    padding: 0;
     margin: 0;
+    padding: 0;
+    padding-top: 40px;
     text-align: center;
   }
 }
 #experimentation #section-1-experiment #image-section-1 {
   background-image: url("../img/experimentation/obama.jpg");
   background-position: center;
+  background-position-x: -150px;
   background-size: cover;
   height: 50vh;
   margin-top: 100px;
-  background-position-x: -150px;
 }
 @media (min-width: 768px) {
   #experimentation #section-1-experiment #image-section-1 {
-    padding-top: 100px;
     grid-column-start: 1;
     grid-row-start: 2;
     height: 30vh;
+    padding-top: 100px;
   }
 }
 @media (min-width: 1025px) {
   #experimentation #section-1-experiment #image-section-1 {
-    margin-top: 0px;
     height: 400px;
+    margin-top: 0px;
   }
 }
 #experimentation #section-1-experiment #para-section-1 {
@@ -1724,16 +1724,16 @@ progress::-moz-progress-bar {
 }
 @media (min-width: 768px) {
   #experimentation #section-1-experiment #para-section-1 {
-    padding-left: 20px;
     grid-column-start: 2;
     grid-row-start: 2;
+    padding-left: 20px;
     padding-top: 100px;
   }
 }
 @media (min-width: 1025px) {
   #experimentation #section-1-experiment #para-section-1 {
-    padding-right: 15%;
     margin-top: 0px;
+    padding-right: 15%;
     padding-top: 60px;
   }
 }
@@ -1742,12 +1742,11 @@ progress::-moz-progress-bar {
 }
 #experimentation #section-2-experiment #pullquote-section-2 h3 {
   color: #22C9C6;
-  padding-right: 20px;
-  padding-left: 20px;
   margin-bottom: -400px;
-  text-align: right;
-  background-color: #F5F5EE;
   padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: right;
 }
 @media (min-width: 768px) {
   #experimentation #section-2-experiment #pullquote-section-2 h3 {
@@ -1756,7 +1755,6 @@ progress::-moz-progress-bar {
 }
 @media (min-width: 1025px) {
   #experimentation #section-2-experiment #pullquote-section-2 h3 {
-    background-color: transparent;
     margin-bottom: 10vh;
   }
 }
@@ -1767,7 +1765,7 @@ progress::-moz-progress-bar {
 }
 @media (min-width: 1440px) {
   #experimentation #section-2-experiment #pullquote-section-2 {
-    margin-left: 40%;
+    margin-left: 30%;
     margin-right: 15%;
   }
 }
@@ -1786,30 +1784,30 @@ progress::-moz-progress-bar {
 }
 @media (min-width: 1025px) {
   #experimentation #section-2-experiment #image-section-2 {
+    height: 80vh;
     margin: 0px;
     margin-top: -100px;
     width: 100vw;
-    height: 80vh;
   }
 }
 @media (min-width: 1440px) {
   #experimentation #section-2-experiment #image-section-2 {
+    margin-bottom: 150px;
     margin-left: 10%;
-    width: auto;
     margin-right: 10%;
     margin-top: -115px;
-    margin-bottom: 150px;
+    width: auto;
   }
 }
 #experimentation #section-3-experiment {
-  position: relative;
   background-color: #EF777A;
   margin: 100px 0;
+  position: relative;
 }
 #experimentation #section-3-experiment #para-section-3 {
+  align-items: center;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 @media (min-width: 768px) {
   #experimentation #section-3-experiment #para-section-3 {
@@ -1818,9 +1816,9 @@ progress::-moz-progress-bar {
 }
 @media (min-width: 1440px) {
   #experimentation #section-3-experiment #para-section-3 {
+    height: 100vh;
     margin-left: 25%;
     margin-right: 25%;
-    height: 100vh;
   }
 }
 #experimentation #section-3-experiment #para-section-3 p {
@@ -1838,18 +1836,18 @@ progress::-moz-progress-bar {
 }
 @media (min-width: 768px) {
   #experimentation #section-4-experiment {
+    background-color: #F5F5EE;
     column-gap: 20px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding-top: 100px;
-    background-color: #F5F5EE;
   }
 }
 #experimentation #section-4-experiment #pullquote-section-4 {
-  display: flex;
-  justify-content: center;
   align-items: center;
+  display: flex;
   height: 100vh;
+  justify-content: center;
 }
 @media (min-width: 768px) {
   #experimentation #section-4-experiment #pullquote-section-4 {
@@ -1864,16 +1862,14 @@ progress::-moz-progress-bar {
   }
 }
 #experimentation #section-4-experiment #pullquote-section-4 h3 {
+  color: #B9DFE6;
   padding-left: 10px;
   padding-right: 10px;
   text-align: right;
-  color: #B9DFE6;
 }
 @media (min-width: 768px) {
   #experimentation #section-4-experiment #pullquote-section-4 h3 {
     color: #007785;
-    line-height: 2.5rem;
-    font-size: 1.25rem;
     font-family: "Libre Franklin", sans-serif;
     font-size: 1.5625rem;
     line-height: 2.8125rem;
